stopped mobile flickering, bandage-fixed section heights..., i don't really remember sorry

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -7,7 +7,7 @@ body {
 }
 
 h1 {
-  font-size: 2rem;
+  font-size: 2em;
 }
 
 p {
@@ -24,6 +24,7 @@ header {
   box-shadow: 0px 1px 1px 1px #0002;
   background-color: white;
   position: sticky;
+  will-change:top;
   top: 0;
   width: 100%;
 
@@ -52,6 +53,13 @@ footer {
   position: sticky;
   top: 0px;
   z-index: -1;
+  will-change:top; //added this to stop flickering on mobile?
+}
+
+.simplecover{
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
 }
 
 section.intro{
@@ -60,20 +68,16 @@ section.intro{
     top: -80vh;
     color: white;
     box-sizing: border-box;
-    // background-color: black;
-    // opacity: 0.7;
     background-color: rgba(0, 0, 0, .7);
     text-align: center;
-    // width: 80%;
-    // margin-left: 10%;
     padding-bottom: 20px;
     padding-top: 20px;
 
     h1{
-      font-size: 4rem;
+      font-size: 4em;
     }
     h2{
-      font-size: 2rem;
+      font-size: 2em;
       color: white;
       font-style: italic;
     }
@@ -90,7 +94,7 @@ section.intro{
     padding: 15px;
 
     p{
-      font-size: 2rem;
+      font-size: 2em;
     }
   }
 }
@@ -102,11 +106,12 @@ section.intro{
   font-size: 2em;
   padding-left: 10px;
   padding-right: 10px;
-  top: -90vh;
+  top: -95vh;
   position: relative;
 }
 
 section.protests {
+  height: 210vh;
   .card-container {
     width: 100%;
     text-align: right;
@@ -131,7 +136,7 @@ section.protests {
 
     .card__quote {
       font-style: italic;
-      font-size: 0.8rem;
+      font-size: 0.8em;
       line-height: 1.5;
       opacity: 0.8;
     }
@@ -143,6 +148,98 @@ section.protests {
     }
 
     .card__author {
+    }
+  }
+}
+
+section.culture{
+  height: 100vh;
+
+  /* Slideshow container */
+  .slideshow-container {
+    margin-left: 15%;
+    width: 70%;
+    position: relative;
+    margin: auto;
+    top: -90vh;
+  }
+
+  .mySlides{
+    background-color: rgba(0, 0, 0, .7);
+    width: 100%;
+    min-height: 400px;
+  }
+
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -42px;
+    color: white;
+    font-weight: bold;
+    font-size: 50px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+
+  .text {
+    color: #f2f2f2;
+    font-size: 2em;
+    margin-left: 60px;
+    margin-right: 60px;
+    padding-top: 130px;
+    text-align: center;
+  }
+
+  .cred{
+    color: gray;
+    font-size: 0.8em;
+  }
+
+  /* The dots/bullets/indicators */
+  .dot {
+    height: 10px;
+    width: 10px;
+    cursor: pointer;
+    margin: 0 2px;
+    background-color: white;
+    opacity: 0.5;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+
+  .active {
+    opacity: 1;
+  }
+}
+
+//if screen size <= 600px
+@media only screen and (max-width: 600px){
+
+  body{
+    font-size: 0.5em;
+  }
+
+  section.culture{
+    .slideshow-container {
+      margin-left: 0%;
+      width: 100%;
     }
   }
 }
